cabal-version:      2.4
name:               lens-examples
version:            0.1.0.0
synopsis:           Examples of lenses, prisms, and traversals
description:
  Please see the README on GitHub at <https://github.com/mhwombat/lens-examples#readme>
homepage:           https://github.com/mhwombat/lens-examples
bug-reports:        https://github.com/mhwombat/lens-examples/issues
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           Lenses
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/lens-examples

executable lens-examples
  main-is:          Main.hs
  build-depends:
    , base  >=4.7 && <5
    , lens  >= 4.19.2 && < 4.20
    , mtl   ^>=2.2

  hs-source-dirs:   src
  default-language: Haskell2010
